# vector-archive

./: .gitignore  main.py  pyproject.toml
backend/app/: dedupe.py  embedder.py  index_faiss.py  main.py  meta.py  settings.py  storage.py
