[project]
name = "vector-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.129.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
